test/fail/classes/wrong_arg_count_class_method.lly
#[
SyntaxError: Wrong number of arguments to string::concat (4 for 2).
    from wrong_arg_count_class_method.lly:8
]#

var s: string = ""

s.concat(1, 2, 3)
